[package]
name = "state-machine-api"
version = "0.1.1"
authors = ["drmingdrmer <drdr.xp@gmail.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-more = { git = "https://github.com/databendlabs/display-more", tag = "v0.2.0" }
map-api = { git = "https://github.com/databendlabs/map-api", tag = "v0.2.7" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
